--- a/quizApp/src/styles/show-resalt.css
+++ b/quizApp/src/styles/show-resalt.css
@@ -1,9 +1,11 @@
 .show-resalt {
   display: flex;
+  padding: 0;
+  margin: 0;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100%;
+  height: 100vh;
   font-family: 'Raleway';
 }
 
