--- a/quizApp/src/styles/start-page.css
+++ b/quizApp/src/styles/start-page.css
@@ -1,19 +1,22 @@
 .search-form {
-  margin: 0 auto;
+  margin: 0;
+  padding: 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 100%;
+  height: 100vh;
   padding: 0;
   align-items: center;
-  width: 290px;
+  width: 100%;
   font-family: 'Raleway';
+  font-size: 18px;
 }
 
 .serch-form__category,
 .serch-form__difficulty,
 .serch-form__type {
   font-family: inherit;
+  font-size: inherit;
   width: 270px;
   height: 30px;
   text-transform: uppercase;
@@ -24,7 +27,8 @@
   width: 220px;
   height: 30px;
   text-transform: uppercase;
-  font-family: inherit;
+  font-family: 'Raleway';
+  font-size: 18px;
   border-radius: 5px;
 }
 
