--- a/quizApp/src/styles/test-interface.css
+++ b/quizApp/src/styles/test-interface.css
@@ -1,9 +1,11 @@
 .test-interface {
+  margin: 0;
+  padding: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100%;
+  height: 100vh;
 }
 
 .test-interface__title {
